--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello, World!
+<!doctype html>
+<html>
+<head>
+	<meta charset="utf-8">
+
+	<title>leonardomerlin.github.io</title>
+</head>
+<body>
+  <h1>Leonardo Merlin</h1>
+  <pre>hi@leonardomerlin.com.br</pre>
+</body>
+</html>
