--- a/index.html
+++ b/index.html
@@ -1,59 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+---
+layout: page
+class: home
+---
 
-        <title>Leonardo Merlin</title>
-        <meta name="description" content="My Personal Page - Leonardo Merlin">
+<div class="home">
 
-        <!-- Bootstrap CDN -->
-        <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">-->
-        <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">-->
+  <h1 class="page-heading">header</h1>
 
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-          <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-          <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
-        <style>
-            body {
-                font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-                font-size: 14px;
-                line-height: 1.42857143;
-                color: #333;
-                background-color: #fff
-            }
-            blockquote {
-                padding: 10px 20px;
-                margin: 0 0 20px;
-                font-size: 17.5px;
-                border-left: 5px solid #eee
-            }
-            blockquote footer {
-                display: block;
-                font-size: 80%;
-                line-height: 1.42857143;
-                color: #999
-            }
-        </style>
-    </head>
-    <body>
-        <div class="container">
-            <div class="row">
-                <blockquote>
-                    <p>Hi</p>
-                    <footer>Leonardo Merlin</footer>
-                </blockquote>
-            </div>
-        </div>
-
-        <script>
-        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;e=o.createElement(i);r=o.getElementsByTagName(i)[0]; e.src='//www.google-analytics.com/analytics.js';r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));ga('create','UA-35971148-1');ga('send','pageview');
-        </script>
-        <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>-->
-        <!--<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>-->
-    </body>
-</html>
+</div>
