--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@ description: Developer
   <a href="{{ 'projects/' | prepend: site.baseurl}}" title="click to navigate to Projects">my work</a>
   and stories about <a href="{{ 'blog/' | prepend: site.baseurl}}" title="click to navigate to Blog">a developer's routine</a>.
   <br />
-  I want to share with you some fron-end practices that we are doing at <a href="https://serpro.gov.br/" target="_blank" data-toggle="tooltip" title="The biggest governamental company of South America">SERPRO</a>.
+  I want to share with you some front-end practices that we are doing at <a href="https://serpro.gov.br/" target="_blank" data-toggle="tooltip" title="The biggest governamental company of South America">SERPRO</a>.
 </p>
