Each project have a different improvement

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ ga('send', 'pageview');
                     <ul class="highlights">
                         <li>I trained a whole department to work with Scrum and Kanban. About 26 people, 48 hours of Scrum and 56 hours of Kanban. Also, I created a custom version of the Kanban Game for the department reality.</li>
                         <li>Build an application that help managers to prioritize subjectives qualifications and help then to make hard decisions.</li>
-                        <li>Optimized internal process decreasing lead time from 6 moths to 3 weeks.</li>
+                        <li>Optimized internal process decreasing lead time.</li>
                     </ul>
                 </div>
                 <header>
