Add a freelance project

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ ga('send', 'pageview');
         <section class="section main-summary">
             <section>
                 <div>
-                    <p>Hi. I&#39;m Leo. I work for the biggest governmental TI company of South America, Serpro. At here, I work mostly in portals development as a team lead of front-end developers. I like to do lightning talks and promote the share of knowledge. My motivation is to bring internal innovation with entrepreneurial sense. The most used technologies are Liferay Portal at the back-end and AngularJS at the front-end.</p>
+                    <p>Hi. I&#39;m Leo. I work for the biggest governmental TI company of South America, Serpro. At here, I work mostly in portals development as a team lead and frontend consultant. I like to promote lightning talks about web technologies and collaborative development to share knowledge and align the team experiences. My motivation is to bring internal innovation with entrepreneurial sense. The most used technologies are Liferay Portal at the back-end and AngularJS at the front-end.</p>
                 </div>
             </section>
         </section>
@@ -167,7 +167,8 @@ ga('send', 'pageview');
                         <p>Serpro is the biggest government company of South America. My primary role here is improve the User Interface and User Experience of WebApps.</p>
                     </div>
                     <ul class="highlights">
-                        <li>I trained a whole department to work with Scrum and Kanban. About 26 people, 48 hours of Scrum and 56 hours of Kanban. Also, I created a custom version of the Kanban Game for the department reality.</li>
+                        <li>Trained a whole department to work with Scrum and Kanban. About 26 people, 48 hours of Scrum and 56 hours of Kanban.</li>
+                        <li>Created a custom version of the Kanban Game for the department reality.</li>
                         <li>Build an application that help managers to prioritize subjectives qualifications and help then to make hard decisions.</li>
                         <li>Optimized internal process decreasing lead time.</li>
                     </ul>
@@ -191,6 +192,25 @@ ga('send', 'pageview');
                         <li>Magento and OpenCart.</li>
                     </ul>
                 </div>
+                <header class="clear">
+                    <div class="header-left">
+                        <div class="position">Freelance - Web Developer</div>
+                        <div class="organization">DinoQuest</div>
+                    </div>
+                    <div class="date">
+                        <span>March 2013 - May 2013</span>
+                    </div>
+                </header>
+                <div class="item display">
+                    <div class="summary">
+                        <p>DinoQuest was a experimental project on solutions directed studies. My job here was to help implement the frontend and backend using the new technologies of the time. A working example version is available at Heroku (http://dinoquest.herokuapp.com/).</p>
+                    </div>
+                    <ul class="highlights">
+                        <li>Advanced use of MarionetteJS, a BackboneJS framework.</li>
+                        <li>First contact with MongoDB.</li>
+                        <li>We choose the Twitter Bootstrap to deliver the frontend (ASAP).</li>
+                    </ul>
+                </div>
                 <header>
                     <div class="position">Freelance - PHP Developer</div>
                     <div class="company">Lápis Digital (Agency)</div>
@@ -200,8 +220,14 @@ ga('send', 'pageview');
                 </header>
                 <div class="item display">
                     <div class="summary">
-                        <p>Here I develop institucional websites and a e-learning platform</p>
+                        <p>Here I develop institucional websites and a e-learning platform.</p>
                     </div>
+                    <ul class="highlights">
+                        <li>Advanced extensions for Joomla! (versions 1.5, 1.6 and 2.5).</li>
+                        <li>Handcrafted PHP web systems.</li>
+                        <li>First contact with OpenCart.</li>
+                        <li>First contact with CodeIgniter.</li>
+                    </ul>
                 </div>
                 <header>
                     <div class="position">Java Web Developer</div>
