--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ ga('send', 'pageview');
                     <div class="header-left">
                         <div class="studyType">Bachelor</div>
                         <div class="area">Computer Science</div>
-                        <div class="institution">UNIOESTE</div>
+                        <div class="institution">Unioeste</div>
                     </div>
                     <div class="date">
                         <span>January 2007 - July 2013</span>
