--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="index,nofollow">
-    <title>Leonardo Merlin - Resume</title>
+    <meta name="robots" content="index">
+    <title>Leonardo Merlin</title>
     <meta name="author" content="Leonardo Merlin">
-    <meta name="description" content="Computer Scientist, API designer, Frontend Web Developer, Agile Team Leader, User Interface Programmer, Problem Solver, Aggregator of Value.">
-    <meta name="keywords" content="Frontend web developer, agile team leader, ux enthusiast, programmer of government company portals.">
+    <meta name="description" content="Software Engineer, Frontend Web Developer, Team Leader, Value First Strategist.">
+    <meta name="keywords" content="Software Engineer, Frontend web developer, Government">
     <link rel="publisher" href="https://plus.google.com/u/0/+leonardomerlinPlus">
-    <meta name="og:title" content="See the Awesome Resume of Merlin - an almost magical developer ;-)">
+    <meta name="og:title" content="Leonardo Merlin - Software Engineer">
     <meta name="og:type" content="website">
     <meta name="og:image" content="http://leonardomerlin.com.br/photo.png">
     <meta name="og:url" content="http://leonardomerlin.com.br">
@@ -24,7 +24,7 @@
       "@context": "http://schema.org",
       "@type": "Person",
       "name": "Leonardo Merlin",
-      "jobTitle": "Analyst of System Development",
+      "jobTitle": "Software Engineer",
       "worksFor": "Serpro",
       "url": "http://leonardomerlin.com.br"
     }
@@ -49,12 +49,8 @@ ga('send', 'pageview');
                 <h2 class="label">Developer</h2>
             </div>
             <div class="location">
-                <span class="city">Curitiba,</span>
-                <span class="region">PR</span>
-                <span>-</span>
-                <span class="countryCode">Brazil</span>
+                Brazil, South America
             </div>
-<!--             <div>Born in Dourados, MS - Brazil</div> -->
             <div id="contact">
                 <div class="website">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2m-5.15 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56M14.34 14H9.66c-.1-.66-.16-1.32-.16-2 0-.68.06-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2M12 19.96c-.83-1.2-1.5-2.53-1.91-3.96h3.82c-.41 1.43-1.08 2.76-1.91 3.96M8 8H5.08c.95-1.66 2.49-2.94 4.32-3.56C8.8 5.55 8.35 6.75 8 8m-2.92 8H8c.35 1.25.8 2.45 1.4 3.56-1.83-.63-3.37-1.91-4.32-3.56m-.82-2C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2M12 4.03c.83 1.2 1.5 2.54 1.91 3.97h-3.82c.41-1.43 1.08-2.77 1.91-3.97M18.92 8h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.9 4.33 3.56M12 2C6.47 2 2 6.5 2 12a10 10 0 0 0 10 10 10 10 0 0 0 10-10A10 10 0 0 0 12 2z"></path></svg>
@@ -83,49 +79,6 @@ ga('send', 'pageview');
                 </div>
             </section>
         </section>
-<!--         <section class="section margin1">
-            <header>
-                <h2 class='section-title'>Skills</h2>
-            </header>
-            <section id="skills">
-                <div class="item">
-                    <h3 class="name">Languages</h3>
-                    <div class="level advanced">
-                        <em>advanced</em>
-                        <div class="bar"></div>
-                    </div>
-                    <ul class="keywords">
-                        <li>Javascript</li>
-                        <li>PHP</li>
-                        <li>Java</li>
-                    </ul>
-                </div>
-                <div class="item">
-                    <h3 class="name">Technologies</h3>
-                    <div class="level advanced">
-                        <em>advanced</em>
-                        <div class="bar"></div>
-                    </div>
-                    <ul class="keywords">
-                        <li>Angular</li>
-                        <li>Backbone</li>
-                        <li>CSS Processors</li>
-                    </ul>
-                </div>
-                <div class="item">
-                    <h3 class="name">Classes</h3>
-                    <div class="level intermediate">
-                        <em>intermediate</em>
-                        <div class="bar"></div>
-                    </div>
-                    <ul class="keywords">
-                        <li>Front-end</li>
-                        <li>Kanban</li>
-                        <li>Scrum</li>
-                    </ul>
-                </div>
-            </section>
-        </section> -->
         <section class="section">
             <header>
                 <h2 class='section-title'>Work Experience</h2>
@@ -168,18 +121,6 @@ ga('send', 'pageview');
                         <li>Implemented secure integration with payment gateway for e-commerce.</li>
                     </ul>
                 </div>
-                <!-- <header id="work-at-dinoquest">
-                    <a href="#work-at-dinoquest" class="position">Freelance Developer</a>
-                    <div class="company">DinoQuest</div>
-                    <div class="date">
-                        <span>March 2013 - May 2013</span>
-                    </div>
-                </header>
-                <div class="item display">
-                    <div class="summary">
-                        <p>DinoQuest was a experimental project on solutions directed studies (http://dinoquest.herokuapp.com/).</p>
-                    </div>
-                </div> -->
                 <header id="work-at-lapisdigital">
                     <a href="#work-at-lapisdigital" class="position">Freelance Developer</a>
                     <div class="company">Lápis Digital (Agency)</div>
