--- a/talks/tdc-2018-design-systems/index.html
+++ b/talks/tdc-2018-design-systems/index.html
@@ -29,8 +29,8 @@
   <body>
     <div class="reveal">
       <div class="slides">
-        <section>Slide 1</section>
-        <section>Slide 2</section>
+        <!-- <section>Slide 1</section> -->
+        <!-- <section>Slide 2</section> -->
 
         <section
           data-markdown="./slides.md"
