--- a/talks/index.html
+++ b/talks/index.html
@@ -13,7 +13,12 @@
             <strong>2018-12-05</strong>: <a href="./tdc-2018-design-systems/index.html">Design Systems - TDC 2018 POA</a>
         </li>
         <li>
-            <strong>2018-12-05</strong>: <a href="./tdc-2018-design-systems/index.html">Chrome DevTools - TDC 2018 POA</a>
+            <strong>2018-12-05</strong>: <a href="./tdc-2018-chrome-devtools/index.html">Chrome DevTools - TDC 2018 POA</a>
+            <ul>
+                <li>
+                    <a href="./tdc-2018-chrome-devtools/exemplos/paint-timing.html">Paint Timing API</a>
+                </li>
+            </ul>
         </li>
     </ul>
 </body>
