--- a/talks/index.html
+++ b/talks/index.html
@@ -16,8 +16,18 @@
             <strong>2018-12-05</strong>: <a href="./tdc-2018-chrome-devtools/index.html">Chrome DevTools - TDC 2018 POA</a>
             <ul>
                 <li>
+                    <a href="./tdc-2018-chrome-devtools/exemplos/networks/index.html">Network Panel</a>
+                </li>
+                <li>
+                    <a href="./tdc-2018-chrome-devtools/exemplos/flamechart/flame1.html">Flame Chart 1</a>
+                </li>
+                <li>
                     <a href="./tdc-2018-chrome-devtools/exemplos/paint-timing.html">Paint Timing API</a>
                 </li>
+                <li>
+                    <a href="./tdc-2018-chrome-devtools/exemplos/todomvc/examples/vanillajs/">To-Do MVC - VanillaJS</a>
+                </li>
+                
             </ul>
         </li>
     </ul>
