updated main-summary and serpro description

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ ga('send', 'pageview');
         <section class="section main-summary">
             <section>
                 <div>
-                    <p>Hi. I&#39;m Leo. I work for the biggest governmental IT company of South America, Serpro. I&#39;m the lead developer of the front-end team. On top of programming, I teach web development and project management across the company.</p>
+                    <p>Hi. I&#39;m Leo. I work for the largest governmental IT company of South America, Serpro. I&#39;m the lead developer of the front-end team. On top of programming, I teach about web performance and user experience across the company.</p>
                 </div>
             </section>
         </section>
@@ -93,7 +93,7 @@ ga('send', 'pageview');
             </header>
             <section id="work">
                 <header id="work-at-serpro">
-                    <a href="#work-at-serpro" class="position">Software Engineer</a>
+                    <a href="#work-at-serpro" class="position">Front-end Engineer</a>
                     <div class="company">Serpro</div>
                     <div class="date"><span>Feb 2014 - Now</span></div>
                 </header>
@@ -102,18 +102,17 @@ ga('send', 'pageview');
                 </div>
                 <div class="item display">
                     <div class="summary">
-                        <p>My primary role here is to take care of Accessibility, Performance and the User Experience of governmental solutions.</p>
+                        <p>My primary role here is to take care of Performance, Accessibility and the User Experience of governmental solutions.</p>
                     </div>
                     <ul class="highlights">
                         <li>Created a pattern library, standardizing UI over different projects and reducing code duplication.</li>
-                        <li>Trained other teams on frontend topics: Angular, Bootstrap, Material Design, Module Bundlers and Pre-Processors.</li>
+                        <li>Trained other teams on frontend topics: Angular, Vue and React.</li>
                         <li>Trained other teams on Scrum, Kanban and others agile project management.</li>
                         <li>Created a tool to help project managers prioritize objectives and solve resource allocation problems.</li>
-                        <li>Proposed and implemented Agile workflows on different teams.</li>
                     </ul>
                 </div>
                 <header id="work-at-ntv">
-                    <a href="#work-at-ntv" class="position">Front-End Developer</a>
+                    <a href="#work-at-ntv" class="position">Front-end Developer</a>
                     <div class="company">NTV (Agency)</div>
                     <div class="date">
                         <span>November 2012 - April 2013</span>
@@ -124,7 +123,7 @@ ga('send', 'pageview');
                 </div>
                 <div class="item display">
                     <ul class="highlights">
-                        <li>Developed three big online stores. One, for the biggest supermarket of the region.</li>
+                        <li>Developed three big online stores. One, for the largest supermarket of the region.</li>
                         <li>Created a reusable responsive theme to use across different online stores.</li>
                         <li>Implemented secure integration with payment gateway for e-commerce.</li>
                     </ul>
@@ -166,6 +165,27 @@ ga('send', 'pageview');
         </section>
         <section class="section">
             <header>
+                <h2 class='section-title'>Awards</h2>
+            </header>
+            <section id="awards">
+                <header id="awards-at-pipefy">
+                    <a href="#awards-at-pipefy" class="position">Code Challenge</a>
+                    <div class="company">Pipefy</div>
+                    <div class="date">
+                        <span>2018</span>
+                    </div>
+                </header>
+                <header id="awards-at-startupweekend">
+                    <a href="#awards-at-startupweekend" class="position">Mention of Honor</a>
+                    <div class="company">Cascavel Startup Weekend</div>
+                    <div class="date">
+                        <span>2017</span>
+                    </div>
+                </header>
+            </section>
+        </section>
+        <section class="section">
+            <header>
                 <h2 class='section-title'>Volunteer</h2>
             </header>
             <section id="volunteer">
@@ -185,12 +205,12 @@ ga('send', 'pageview');
         </section>
         <section class="section">
             <header>
-                <h2 class='section-title'>Education <span class="item-count">(1)</span></h2>
+                <h2 class='section-title'>Education</h2>
             </header>
             <section id="education">
                 <header id="study-at-unioeste">
                     <a href="#study-at-unioeste" class="position">Computer Science</a>
-                    <div class="institution">Unioeste</div>
+                    <div class="institution">Unioeste (Bachelor)</div>
                     <div class="date">
                         <span>January 2007 - July 2013</span>
                     </div>
