--- a/talks/index.html
+++ b/talks/index.html
@@ -7,7 +7,7 @@
     <title>Slides Index - Leonardo Merlin</title>
 </head>
 <body>
-    <h1>Slides Index @ LeonardoMerlin</h1>
+    <h1>Slides Index @ TAHBJASDFDC</h1>
     <ul>
         <li>
             <strong>2018-12-05</strong>: <a href="./tdc-2018-design-systems/index.html">Design Systems - TDC 2018 POA</a>
@@ -20,6 +20,9 @@
                 </li>
                 <li>
                     <a href="./tdc-2018-chrome-devtools/exemplos/flamechart/flame1.html">Flame Chart 1</a>
+                </li>
+                <li>
+                    <a href="./tdc-2018-chrome-devtools/exemplos/flamechart/flame-libs.html">Flame Chart LIBS</a>
                 </li>
                 <li>
                     <a href="./tdc-2018-chrome-devtools/exemplos/paint-timing.html">Paint Timing API</a>
